--- a/app/assets/stylesheets/bloggers.scss
+++ b/app/assets/stylesheets/bloggers.scss
@@ -1,62 +1,39 @@
+@import "variables";
+@import "base";
+
+// All Bloggers
 #main-bloggers-listing {
-  background-color: #f5f9fd;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  padding: 0;
-  flex: 1;
+  @include style-main-container(0px);
 
   .container-wrapper {
-    position: relative;
-    margin: 80px 180px 0;
+    @include style-container-wrapper(80px 180px 30px);
 
     .bloggers-listing__heading {
-      align-self: flex-start;
-      margin: 24px 0 32px 32px;
+      @include style-list-heading(24px 0 32px 32px);
 
       h2 {
-        margin: 0;
-        color: #434e55;
+        @include style-header(30px);
       }
 
       .seperator {
-        background: #434e55;
-        width: 100px;
-        height: 2px;
-        margin: 0 0 1rem;
-        border: none;
+        @include style-seperator(100px);
       }
     }
 
     .bloggers__listing {
-      display: grid;
-      grid-template-columns: repeat(3, 30%);
-      grid-template-rows: auto auto auto auto;
-      align-items: center;
-      justify-content: center;
-      grid-gap: 24px;
-      flex: 1;
-      width: 100%;
+      @include style-listings-grid(repeat(3, 30%), 24px);
+      @include style-listings-temp;
 
       .blogger-wrapper {
-        width: 100%;
-        height: 100%;
-        position: relative;
+        @include style-listing-wrapper;
 
         .no-decoration {
           text-decoration: none;
 
           .blogger-info {
-            position: relative;
-            padding: 24px 28px 32px;
-            background: #fff;
-            box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
-            border: 1px solid #eaeaea;
+            @include style-listing-content;
             border-radius: 4px;
             outline: none;
-            font-family: "Montserrat", sans-serif;
-            font-size: 12px;
-            color: #434e55;
 
             .blogger__image {
               text-align: center;
@@ -74,15 +51,64 @@
               margin: 10px 0;
             }
 
-            .blogger__articles {
-              font-size: 12px;
+            .blogger-articles__link {
+              @include style-content-link;
               text-align: center;
               margin: 5px 0;
-              color: #ff7a00;
             }
           }
         }
       }
     }
   }
+}
+
+// Profile Modal
+#update-profile-modal {
+  @include style-main-modal-wrapper(430px, 386px);
+
+  .update-profile-modal-content {
+    @include style-modal-content(16px);
+
+    #btn-close {
+      @include style-close-modal-btn;
+    }
+
+    .update-profile-header {
+      @include style-modal-header;
+    }
+
+    .profile-form-content {
+      .form-horizontal {
+        @include style-profile-form-horizontal;
+        
+        .col-sm-6 {
+          width: 100%;
+
+          input {
+            @include style-input-field(360px, 4px, 38px);
+          }
+
+          .fa-user,
+          .fa-envelope,
+          .fa-lock,
+          .fa-pencil-alt {
+            @include style-form-icons;
+          }
+
+          .form-textarea {
+            @include style-input-field(360px, 4px, 76px);
+          }
+
+          input[type="submit"] {
+            @include style-submit-btn(18px, 12px, 5%);
+          }
+        }
+      }
+    }
+  }
+}
+
+.update-profile-modal-overlay {
+  @include style-modal-overlay;
 }
