--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "base";
 
 @mixin style-grid($grid, $grid-gap) {
   display: grid;
@@ -46,6 +47,7 @@
         }
 
         .profile-info__action {
+          font-size: 16px;
           border: 0.75px solid $color-orange-first;
           border-radius: 5px;
           padding: 8px 12px;
@@ -222,121 +224,6 @@
       }
     }
   }
-}
-
-// Profile Modal
-#update-profile-modal {
-  display: none;
-  z-index: 1010;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 430px;
-  max-width: 100%;
-  height: 380px;
-  max-height: 100%;
-
-  .update-profile-modal-content {
-    border-radius: 8px;
-    text-align: center;
-    background-color: $color-white;
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-
-    #btn-close {
-      float: right;
-      cursor: pointer;
-      min-width: 18px;
-      min-height: 18px;
-      background: url("close.svg") no-repeat;
-    }
-
-    .update-profile-header {
-      font-size: 28px;
-      line-height: 26px;
-      padding-bottom: 12px;
-    }
-
-    .profile-form-content {
-      .form-horizontal {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        .form-group {
-          position: relative;
-          margin-bottom: 8px;
-        }
-
-        .col-sm-6 {
-          width: 100%;
-
-          input {
-            width: 100%;
-            min-width: 360px;
-            padding-left: 36px;
-            height: 38px;
-            border-radius: 4px;
-            border: 1px solid $color-dark-grey;
-          }
-
-          .fa-user,
-          .fa-envelope,
-          .fa-lock,
-          .fa-pencil-alt {
-            position: absolute;
-            top: 10px;
-            left: 28px;
-          }
-
-          .form-textarea {
-            width: 100%;
-            min-width: 360px;
-            padding-left: 36px;
-            height: 76px;
-            border-radius: 4px;
-            border: 1px solid $color-dark-grey;
-          }
-
-          input[type="submit"] {
-            color: $color-white;
-            background: $color-orange-first;
-            text-align: center;
-            font-size: 16px;
-            padding-left: 12px;
-            outline: none;
-            border: transparent;
-            border-radius: 3px;
-            margin-top: 12px;
-            cursor: pointer;
-
-            &:hover {
-              background: darken($color-orange-first, 5%);
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-.update-profile-modal-overlay {
-  display: none;
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.4);
 }
 
 @media (min-width: 1200px) {
