--- a/app/assets/stylesheets/signup_page.scss
+++ b/app/assets/stylesheets/signup_page.scss
@@ -1,90 +1,25 @@
+@import "variables";
+@import "auth_components";
+
 #main-signup {
-  flex: 1;
-  background: linear-gradient(rgba(0, 0, 0, 0.66), rgba(0, 0, 0, 0.66)),
-    asset-url("signup.jpg") center/cover;
+  @include style-main-container("signup.jpg");
 
   .container-fluid {
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    margin: 200px auto auto;
-
-    h2 {
-      color: #ffffff;
-      margin: 0;
-      text-align: center;
-      font-size: 16px;
-      margin-bottom: 30px;
-    }
+    @include style-container-fluid;
 
     .signup-form {
-      margin: auto;
-      width: 100%;
-      height: auto;
-      border: 1px solid #fff;
-      padding: 40px 30px;
-      border-radius: 5px;
+      @include style-auth-form(100%);
 
       .form-horizontal {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include style-form-horizontal;
 
-        .form-group {
-          position: relative;
-          margin-bottom: 8px;
-        }
-
-        .col-sm-6 input {
-          width: 100%;
-          min-width: 280px;
-          padding-left: 36px;
-          height: 38px;
-          border-radius: 0;
-          background: #fcfcfc;
-          border: 1px solid #aaa;
-        }
-
-        .col-sm-6 .fa-user,
-        .col-sm-6 .fa-envelope,
-        .col-sm-6 .fa-lock {
-          position: absolute;
-          top: 10px;
-          left: 28px;
-        }
-
-        .col-sm-6 input[type="submit"] {
-          color: #ffffff;
-          background: #ff7a00;
-          text-align: center;
-          font-size: 16px;
-          padding-left: 12px;
-          outline: none;
-          border: transparent;
-          border-radius: 3px;
-          margin-top: 8px;
-          cursor: pointer;
-
-          &:hover {
-            background: #e06d02;
-          }
+        .col-sm-6 {
+          @include style-form-input-fields;
         }
       }
 
       p {
-        color: #ffffff;
-        font-size: 13px;
-        line-height: 16px;
-        margin-bottom: 30px;
-
-        a {
-          color: #ffffff;
-
-          &:hover {
-            color: #ff7a00;
-            text-decoration: none;
-          }
-        }
+        @include style-p-tag(30px);
       }
 
       .signup-actions {
@@ -94,26 +29,7 @@
       }
 
       .social-links {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-
-        a {
-          &:hover {
-            transform: scale(1.3);
-            transition: all 0.2s ease-in-out;
-          }
-
-          img {
-            height: 20px;
-            padding-left: 1rem;
-          }
-        }
-
-        #facebook > img {
-          height: 26px;
-        }
+        @include style-social-links;
       }
     }
   }
