--- a/app/views/categories/_new.html.erb
+++ b/app/views/categories/_new.html.erb
@@ -4,7 +4,7 @@
       <span id="new-category-close"></span>
     </div>
     <div class="new-category-header">
-      <span>Create new category</span>
+      <span>New category</span>
     </div>
     <div class="category-form-content">
       <%= render  "form" %> 
