--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -203,18 +203,7 @@
           }
 
           .article-meta-details {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            small {
-              font-size: 12px;
-              color: $color-grey;
-            }
-
-            .article-username {
-              text-transform: capitalize;
-            }
+            @include style-article-meta-details;
           }
 
           .article-body {
