--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -134,18 +134,7 @@
               }
 
               .article-meta-details {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-
-                small {
-                  font-size: 12px;
-                  color: $color-grey;
-                }
-
-                .article-username {
-                  text-transform: capitalize;
-                }
+                @include style-article-meta-details;
               }
 
               .article-body {
