--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,37 +1,43 @@
-<h2 align="center">Title: <%= @article.title %></h2>
+<div id="main-read-article">
+  <div class="container-wrapper">
+    <div class="read-article__heading">
+      <h2 class="article-title"><%= @article.title %></h2>
+      <div class="seperator"></div>
+    </div>
 
-<div class="well col-xs-4 col-xs-offset-4">
-  <% if @article.user %>
-    <ul class="listing">
-      <div class="row center">
-        <div class="col-md-2 col-md-offset-5">
-        <li>Created by:</li>
-          <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
-          <li class="article-title">
-            <%= link_to @article.user.username, user_path(@article.user) %>
-          </li>
-          <li>
-            <small>
-              <%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
-            </small>
-          </li>
+    <div class="read-article__wrapper">
+      <% if @article.user %>
+        <div class="article-meta-details">
+          <div class="article-user__details">
+            <small class="user__image"><%= link_to gravatar_for(@article.user), user_path(@article.user) %></small>
+              <div>
+                <small class="user__name">By: <%= link_to @article.user.username, user_path(@article.user) %></small>
+                <small><%= time_ago_in_words(@article.created_at) %> ago</small>
+              </div>
+          </div>
+          <div class="user-follow-btn">Follow</div>
         </div>
+      <% end %>
+
+      <div class="article-body">
+        <%= simple_format(@article.description) %>
       </div>
-    </ul>
-  <% end %>
-  <h4 class="center description"><strong>Description</strong></h4>
-  <hr>
-  <%= simple_format(@article.description) %>
-  <% if @article.categories.any? %>
-    <%= render  @article.categories %>
-  <% end %>
-  <div class="article-actions">
-    <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-      <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-      <%= link_to "Delete", article_path(@article), method: :delete,
-                                  data: {confirm: "Are you sure you want to delete?"},
-                                  class: "btn btn-xs btn-danger" %>
-    <% end %>
-    <%= link_to "Back", articles_path, class: "btn btn-xs btn-success" %>
+
+      <div class="article-category">
+        <% if @article.categories.any? %>
+          <%= render  @article.categories %>
+        <% end %>
+      </div>
+
+      <div class="article-actions">
+        <%= link_to "Back", articles_path, class: "btn btn-xs btn-success" %>
+        <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+          <%= link_to '<i class="far fa-edit"></i>'.html_safe, edit_article_path(@article) %>
+          <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, article_path(@article), method: :delete,
+              data: {confirm: "Are you sure you want to delete?"} %>
+        <% end %>
+      </div>
+
+    </div>
   </div>
 </div>
