--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -28,7 +28,7 @@ body {
 }
 
 @mixin style-header($font-size) {
-  margin: 0;
+  margin: 0 0 3px 0;
   color: $color-grey;
   font-size: $font-size;
 }
@@ -93,6 +93,49 @@ body {
 
   .article-username {
     text-transform: capitalize;
+  }
+}
+
+@mixin style-article-categories {
+  margin: 12px 0;
+  height: 18px;
+
+  .item-category {
+    background: $color-whitesmoke;
+    border-radius: 16px;
+    padding: 6px 8px;
+    margin: 0 3px 0 0;
+
+    a {
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: -1px;
+      color: $color-orange-first;
+      margin-top: 10px;
+    }
+
+    &:hover {
+      a {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+@mixin style-article-actions($font-size) {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 6px;
+
+  span {
+    a {
+      font-size: $font-size;
+      text-transform: uppercase;
+      color: $color-grey;
+      &:hover {
+        color: $color-orange-first;
+      }
+    }
   }
 }
 
